syntax = "proto3";

package pb;

import "order.proto";
import "product.proto";

option go_package = "github.com/siddheshRajendraNimbalkar/bookstore/order/pb";

message CreateOrderRequest {
    string product_id = 1;
    int32 quantity = 2;
}

message OrderResponse {
    Order order = 1;
    Product product = 2;
}

message GetOrderRequest {
    string id = 1;
}

message GetProductRequest {
    string id = 1;
}

message ProductResponse {
    Product product = 1;
}